@@ -10,15 +10,23 @@ use warnings;
         description => "set",
         autoflush   => 1,
         prefix      => 'foo.',
-        input       => [ [qw/ add_set addresses 192.168.0.1 /], ],
+        input       => [ [qw/ set_add addresses 192.168.0.1 /], ],
         output      => "foo.addresses:192.168.0.1|s\n",
     },
     {
         description => "set (utf8 value)",
         autoflush   => 1,
         prefix      => 'foo.',
-        input       => [ [ qw/ add_set places Äland/, ], ],
+        input       => [ [ qw/ set_add places Äland/, ], ],
         output      => "foo.places:Äland|s\n",
+    },
+
+     {
+        description => "add_set (alias for set_add)",
+        autoflush   => 1,
+        prefix      => 'foo.',
+        input       => [ [qw/ add_set addresses 192.168.0.1 /], ],
+        output      => "foo.addresses:192.168.0.1|s\n",
     },
 
 ]
