@@ -1,6 +1,9 @@
 Revision history for Net-Statsd-Tiny
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Renamed add_set to set_add, but kept alias for backwards
+    compatability.
 
 v0.1.0    2018-02-05 13:30:21+00:00 Europe/London
   - Initial version released.
